Fixed contrast issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,7 +56,7 @@ a:hover {
   max-width: 1200px;
   margin: 1em auto;
   background-color: #fff;
-  border: 4px solid #4c96d7;
+  border: 4px solid #4BD6CB;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   padding: 1em;
   border-radius: 5px;
@@ -82,15 +82,15 @@ a:hover {
 #tools a {
   font-size: 1rem;
   padding: 0.5em 1em;
-  background-color: #4c96d7;
-  color: #fff;
+  background-color: #4BD6CB;
+  color: #3B2525;
   border-radius: 4px;
   text-decoration: none;
 }
 
 #tools a:hover {
   background-color: #3a75a8;
-  color: #fff;
+  color: #3B2525;
   text-decoration: none;
 }
 
@@ -133,8 +133,8 @@ nav ul li a:hover {
 
 /* Active Navigation Link */
 nav ul li.active a {
-  background-color: #4c96d7;
-  color: #fff;
+  background-color: #4BD6CB;
+  color: #3B2525;
   font-weight: bold;
 }
 
@@ -167,10 +167,10 @@ h1 {
   position: absolute;
   top: 5%;
   left: 5%;
-  background-color: rgba(76, 150, 215, 0.75);
+  background-color: #4BD6CB;
   padding: 1.5%;
   border-radius: 5px;
-  color: #fff;
+  color: #3B2525;
   width: clamp(160px, 25%, 300px);
   /* I don't want the overlay to float */
   transition: width 0.1s ease-in-out, top 0.1s ease-in-out, left 0.1s ease-in-out;
@@ -178,7 +178,7 @@ h1 {
 
 .hero-overlay h2 {
   margin: 0 0 0.5em 0;
-  color: #fff;
+  color: #3B2525;
   font-family: 'Lato', sans-serif;
   font-size: clamp(1rem, 2.2vw, 1.6rem);
 }
@@ -230,7 +230,7 @@ h1 {
 }
 
 .upgrade-option {
-  background-color: #4c96d7;
+  background-color: #4BD6CB;
   padding: 1em;
   text-align: center;
   border-radius: 5px;
@@ -253,7 +253,7 @@ h1 {
 .upgrade-link {
   display: block;
   margin-top: 0.5em;
-  color: #fff;
+  color: #3B2525;
   font-weight: bold;
 }
 
